<resources>
    <string name="app_name">Cocktail</string>
    <string name="cocktail_photo">cocktail_photo</string>
    <string name="cocktail_welcome">Cocktail</string>
    <string name="welcome_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="welcome_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="welcome_text3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="advance">Advance</string>
    <string name="find_by_name">Find by name</string>
    <string name="find_by_letter">Find by letter</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="search">Search</string>
    <string name="enter_the_letter">Enter the letter</string>
    <string name="arrow_right">arrow_right</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="last_date_modify">Last time modified:</string>
    <string name="glass">glass:</string>
    <string name="alcoholic">alcoholic:</string>
    <string name="style">style:</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="a">Remove from favourites</string>
    <string name="main_page">Main page</string>
    <string name="go_to_favourites">Go to Favourites</string>
</resources>
