<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".FindByLetterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/cocktail_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search_by_name_background" />

    <EditText
        android:id="@+id/editTextCocktailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_the_letter"
        android:inputType="textPersonName"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonSearchByName"
        android:layout_width="62dp"
        android:layout_height="22dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/search"
        android:onClick="onClickSearchByLetter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/editTextCocktailName"
        app:layout_constraintStart_toEndOf="@+id/editTextCocktailName"
        app:layout_constraintTop_toBottomOf="@+id/editTextCocktailName" />

</androidx.constraintlayout.widget.ConstraintLayout>